--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,13 @@
 name: tr_extension
 description: A smart and lightweight string translation through extension.
-version: 0.5.0
+version: 0.5.1
 homepage: https://wwww.branvier.com
+repository: https://github.com/arthurbcd/tr_extension.git
+topics:
+ - smart
+ - string
+ - extension
+ - translation
 
 environment:
   sdk: '>=2.17.0 <4.0.0'
