--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tr_extension
 description: A smart and lightweight string translation through extension.
-version: 0.5.1
+version: 0.6.0
 homepage: https://wwww.branvier.com
 repository: https://github.com/arthurbcd/tr_extension.git
 topics:
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  intl: '>=0.17.0 <1.0.0'
 
 dev_dependencies:
   flutter_test:
